@@ -1,4 +1,4 @@
-/* Copyright 2002-2024 CS GROUP
+/* Copyright 2002-2025 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -27,12 +27,9 @@ import cesiumlanguagewriter.PolylineMaterialCesiumWriter;
 import cesiumlanguagewriter.PositionListCesiumWriter;
 import cesiumlanguagewriter.Reference;
 import cesiumlanguagewriter.SolidColorMaterialCesiumWriter;
-import cesiumlanguagewriter.TimeInterval;
-import org.orekit.czml.archi.builder.NonVectorPolylineBuilder;
-import org.orekit.czml.archi.builder.VectorPolylineBuilder;
 import org.orekit.czml.errors.OreCzmlException;
 import org.orekit.czml.errors.OreCzmlMessages;
-import org.orekit.czml.object.primary.Header;
+import org.orekit.czml.object.secondary.Clock;
 
 import java.awt.Color;
 import java.io.StringWriter;
@@ -42,16 +39,16 @@ import java.util.List;
 
 /**
  * Polyline class
- *
  * <p>
- * Polyline objects are line that can be drawn from one position to another in a given amount of time. They can follow
- * references of objects to update their position in real time during the simulation. They can change color, or can even represents
- * vectors. They are in fact used in the line of visibility of the terrestrial reference system. That is why there are two ways to build
- * a polyline :
+ * Polyline objects are line that can be drawn from one position to another in a
+ * given amount of time. They can follow references of objects to update their
+ * position in real time during the simulation. They can change color, or can
+ * even represents vectors. They are in fact used in the line of visibility of
+ * the terrestrial reference system. That is why there are two ways to build a
+ * polyline :
  * </p>
  * <p>
- * As a vector.
- * As a non-vector fixed line.
+ * As a vector. As a non-vector fixed line.
  * </p>
  *
  * @author Julien LEBLOND.
@@ -105,9 +102,9 @@ public class Polyline {
     private final Color color;
 
     /**
-     * The availability of the polyline.
+     * The clock of the polyline.
      */
-    private TimeInterval availability;
+    private Clock clock;
 
     /**
      * To show or not the polyline.
@@ -115,7 +112,8 @@ public class Polyline {
     private final boolean show;
 
     /**
-     * The arc type of the polyline. (a straight line by default). The available parameters are: NONE, GEODESIC, RHUMB;
+     * The arc type of the polyline. (a straight line by default). The available
+     * parameters are: NONE, GEODESIC, RHUMB;
      */
     private CesiumArcType arcType;
 
@@ -125,22 +123,26 @@ public class Polyline {
     private final Boolean arrow;
 
     /**
-     * The cartesian position of the first extremity of the polyline (for vector polyline).
+     * The cartesian position of the first extremity of the polyline (for vector
+     * polyline).
      */
     private Cartesian firstPosition = new Cartesian(0, 0, 0);
 
     /**
-     * The cartesian position of the first extremity of the polyline (for vector polyline).
+     * The cartesian position of the first extremity of the polyline (for vector
+     * polyline).
      */
     private Cartesian secondPosition = new Cartesian(0, 1000, 0);
 
     /**
-     * The reference for the first extremity of the polyline (for non-vector polyline).
+     * The reference for the first extremity of the polyline (for non-vector
+     * polyline).
      */
     private Reference firstReference;
 
     /**
-     * The reference for the second extremity of the polyline (for non-vector polyline).
+     * The reference for the second extremity of the polyline (for non-vector
+     * polyline).
      */
     private Reference secondReference;
 
@@ -154,46 +156,54 @@ public class Polyline {
      */
     private final double farDistance;
 
-
     // Constructors
+
     // Non-vector constructors
 
     /**
-     * This constructor generates a polyline to be used as a non-vector. It uses default parameters.
+     * This constructor generates a polyline to be used as a non-vector. It uses
+     * default parameters.
      *
-     * @param header : The header considered.
+     * @param clock : The clock considered.
      */
-    public Polyline(final Header header) {
-        this(DEFAULT_REFERENCE, DEFAULT_REFERENCE, DEFAULT_COLOR, DEFAULT_WIDTH, DEFAULT_SHOW, DEFAULT_ARC_TYPE,
-                DEFAULT_NEAR_DISTANCE, DEFAULT_FAR_DISTANCE, header);
+    Polyline(final Clock clock) {
+        this(DEFAULT_REFERENCE, DEFAULT_REFERENCE, DEFAULT_COLOR, DEFAULT_WIDTH,
+             DEFAULT_SHOW, DEFAULT_ARC_TYPE, DEFAULT_NEAR_DISTANCE,
+             DEFAULT_FAR_DISTANCE, clock);
     }
 
     /**
-     * This constructor generates a polyline to be used as a non-vector. It uses no default parameters.
+     * This constructor generates a polyline to be used as a non-vector. It uses
+     * no default parameters.
      *
-     * @param firstReference  : The reference for the first extremity of the polyline.
-     * @param secondReference : The reference for the second extremity of the polyline.
-     * @param color           : The color of the polyline.
-     * @param width           : The width of the polyline.
-     * @param show            : To show or not the polyline.
-     * @param arcType         : The arc-type of the polyline.
-     * @param nearDistance    : The near distance where the polyline must be displayed.
-     * @param farDistance     : The far distance where the polyline must not be displayed anymore.
-     * @param header          : The header considered.
+     * @param firstReference : The reference for the first extremity of the
+     *        polyline.
+     * @param secondReference : The reference for the second extremity of the
+     *        polyline.
+     * @param color : The color of the polyline.
+     * @param width : The width of the polyline.
+     * @param show : To show or not the polyline.
+     * @param arcType : The arc-type of the polyline.
+     * @param nearDistance : The near distance where the polyline must be
+     *        displayed.
+     * @param farDistance : The far distance where the polyline must not be
+     *        displayed anymore.
+     * @param clock : The clock
      */
-    public Polyline(final Reference firstReference, final Reference secondReference, final Color color,
-                    final double width, final boolean show, final CesiumArcType arcType, final double nearDistance,
-                    final double farDistance, final Header header) {
-        this.firstReference  = firstReference;
+    Polyline(final Reference firstReference, final Reference secondReference,
+             final Color color, final double width, final boolean show,
+             final CesiumArcType arcType, final double nearDistance,
+             final double farDistance, final Clock clock) {
+        this.firstReference = firstReference;
         this.secondReference = secondReference;
-        this.availability    = header.getAvailability();
-        this.color           = color;
-        this.width           = width;
-        this.show            = show;
-        this.arrow           = false;
-        this.arcType         = arcType;
-        this.nearDistance    = nearDistance;
-        this.farDistance     = farDistance;
+        this.clock = clock;
+        this.color = color;
+        this.width = width;
+        this.show = show;
+        this.arrow = false;
+        this.arcType = arcType;
+        this.nearDistance = nearDistance;
+        this.farDistance = farDistance;
     }
 
     // Vector constructors
@@ -201,68 +211,73 @@ public class Polyline {
     /**
      * This constructor generates a polyline to be used as a vector.
      *
-     * @param cartesians : A list of cartesians with size 2, containing the first and the second position of the polyline
-     * @param header     : The header considered.
+     * @param cartesians : A list of cartesians with size 2, containing the
+     *        first and the second position of the polyline
+     * @param clock : The clock
      */
-    public Polyline(final List<Cartesian> cartesians, final Header header) {
-        this(cartesians, DEFAULT_COLOR, DEFAULT_NEAR_DISTANCE, DEFAULT_FAR_DISTANCE, header);
+    Polyline(final List<Cartesian> cartesians, final Clock clock) {
+        this(cartesians, DEFAULT_COLOR, DEFAULT_NEAR_DISTANCE,
+             DEFAULT_FAR_DISTANCE, clock);
     }
 
     /**
      * This constructor generates a polyline to be used as a vector.
      *
-     * @param cartesians   : A list of cartesians with size 2, containing the first and the second position of the polyline
-     * @param color        : the color of the polyline
-     * @param nearDistance : The nearest distance where the polyline is displayed
-     * @param farDistance  : The fairest distance where the polyline is displayed
-     * @param header       : The header considered
+     * @param cartesians : A list of cartesians with size 2, containing the
+     *        first and the second position of the polyline
+     * @param color : the color of the polyline
+     * @param nearDistance : The nearest distance where the polyline is
+     *        displayed
+     * @param farDistance : The fairest distance where the polyline is displayed
+     * @param clock : The clock
      */
-    public Polyline(final List<Cartesian> cartesians, final Color color, final double nearDistance,
-                    final double farDistance, final Header header) {
+    Polyline(final List<Cartesian> cartesians, final Color color,
+             final double nearDistance, final double farDistance,
+             final Clock clock) {
         if (cartesians.size() != 2) {
             throw new OreCzmlException(OreCzmlMessages.MORE_THAN_2_CARTESIAN_POLYLINE);
         } else {
-            this.width        = 2;
-            this.color        = color;
-            this.show         = true;
-            this.arcType      = CesiumArcType.NONE;
-            this.arrow        = true;
-            this.availability = header.getAvailability();
-            firstPosition     = cartesians.get(0);
-            secondPosition    = cartesians.get(1);
+            this.width = 2;
+            this.color = color;
+            this.show = true;
+            this.arcType = CesiumArcType.NONE;
+            this.arrow = true;
+            this.clock = clock;
+            firstPosition = cartesians.get(0);
+            secondPosition = cartesians.get(1);
             this.nearDistance = nearDistance;
-            this.farDistance  = farDistance;
+            this.farDistance = farDistance;
         }
     }
-
 
     // Builders
 
     /**
      * Non vector builder non vector polyline builder.
      *
-     * @param header the header
+     * @param clock : The clock.
      * @return the non vector polyline builder
      */
-    public static NonVectorPolylineBuilder nonVectorBuilder(final Header header) {
-        return new NonVectorPolylineBuilder(header);
+    public static NonVectorPolylineBuilder nonVectorBuilder(final Clock clock) {
+        return new NonVectorPolylineBuilder(clock);
     }
 
     /**
      * Vector builder vector polyline builder.
      *
      * @param cartesians the cartesians
-     * @param header     the header
+     * @param clock the clock
      * @return the vector polyline builder
      */
-    public static VectorPolylineBuilder vectorBuilder(final List<Cartesian> cartesians, final Header header) {
-        return new VectorPolylineBuilder(cartesians, header);
+    public static VectorPolylineBuilder
+        vectorBuilder(final List<Cartesian> cartesians, final Clock clock) {
+        return new VectorPolylineBuilder(cartesians, clock);
     }
 
     @Override
     public String toString() {
-        final StringWriter       writerTemp   = new StringWriter();
-        final CesiumOutputStream output       = new CesiumOutputStream(writerTemp);
+        final StringWriter writerTemp = new StringWriter();
+        final CesiumOutputStream output = new CesiumOutputStream(writerTemp);
         final CesiumStreamWriter streamWriter = new CesiumStreamWriter();
         output.setPrettyFormatting(true);
         try (PacketCesiumWriter packet = streamWriter.openPacket(output)) {
@@ -270,15 +285,23 @@ public class Polyline {
                 this.writePolylineVectorFixed(packet, output);
             } else {
                 if (firstReference != null) {
-                    final Reference[] references = Arrays.asList(firstReference, secondReference)
-                                                         .toArray(new Reference[0]);
-                    final Iterable<Reference> iterableReferences = convertToIterable(references);
-                    this.writePolylineOfVisibility(packet, output, iterableReferences,
-                            new ArrayList<>(List.of(new CzmlShow(show, availability))));
+                    final Reference[] references =
+                        Arrays.asList(firstReference, secondReference)
+                            .toArray(new Reference[0]);
+                    final Iterable<Reference> iterableReferences =
+                        convertToIterable(references);
+                    this.writePolylineOfVisibility(packet, output,
+                                                   iterableReferences,
+                                                   new ArrayList<>(List
+                                                       .of(new CzmlShow(show,
+                                                                        clock
+                                                                            .getAvailability()))));
                 } else {
-                    try (PolylineCesiumWriter polylineCesiumWriter = packet.getPolylineWriter()) {
+                    try (PolylineCesiumWriter polylineCesiumWriter =
+                        packet.getPolylineWriter()) {
                         polylineCesiumWriter.open(output);
-                        this.writePositionOfVectorInertial(polylineCesiumWriter, output);
+                        this.writePositionOfVectorInertial(polylineCesiumWriter,
+                                                           output);
                     }
                 }
             }
@@ -289,21 +312,21 @@ public class Polyline {
     // Getters
 
     /**
-     * Gets availability.
+     * Gets the clock.
      *
-     * @return the availability
+     * @return the clock
      */
-    public TimeInterval getAvailability() {
-        return availability;
+    public Clock getClock() {
+        return clock;
     }
 
     /**
-     * Sets availability.
+     * Sets the clock.
      *
-     * @param availability the availability
+     * @param clockInput the clock
      */
-    public void setAvailability(final TimeInterval availability) {
-        this.availability = availability;
+    public void setAvailability(final Clock clockInput) {
+        this.clock = clockInput;
     }
 
     /**
@@ -342,6 +365,8 @@ public class Polyline {
         return arcType;
     }
 
+    // Setters
+
     /**
      * Sets arc type.
      *
@@ -351,48 +376,44 @@ public class Polyline {
         this.arcType = arcType;
     }
 
-
-    // Setters
-
-    /**
-     * Gets arrow.
-     *
-     * @return the arrow
-     */
-    public Boolean getArrow() {
-        return arrow;
-    }
-
-
     // Private functions
 
     /**
-     * This functions aims at writing a polyline built as a vector in the Inertial frame.
+     * This functions aims at writing a polyline built as a vector in the
+     * Inertial frame.
      *
      * @param packet : The packet where the polyline is written
-     * @param output : The cesium output stream that writes the strings in the file
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
      */
-    public void writePolylineVectorInertial(final PacketCesiumWriter packet, final CesiumOutputStream output) {
+    public void writePolylineVectorInertial(final PacketCesiumWriter packet,
+                                            final CesiumOutputStream output) {
         if (arrow) {
-            try (PolylineCesiumWriter polylineWriter = packet.getPolylineWriter()) {
+            try (PolylineCesiumWriter polylineWriter =
+                packet.getPolylineWriter()) {
                 polylineWriter.open(output);
                 polylineWriter.writeWidthProperty(width);
                 polylineWriter.writeArcTypeProperty(arcType);
                 polylineWriter.writeShowProperty(show);
-                polylineWriter.writeDistanceDisplayConditionProperty(nearDistance, farDistance);
-                try (PolylineMaterialCesiumWriter materialWriter = polylineWriter.getMaterialWriter()) {
+                polylineWriter
+                    .writeDistanceDisplayConditionProperty(nearDistance,
+                                                           farDistance);
+                try (PolylineMaterialCesiumWriter materialWriter =
+                    polylineWriter.getMaterialWriter()) {
                     materialWriter.open(output);
                     output.writeStartObject();
-                    try (SolidColorMaterialCesiumWriter solidColorWriter = materialWriter.getSolidColorWriter()) {
+                    try (SolidColorMaterialCesiumWriter solidColorWriter =
+                        materialWriter.getSolidColorWriter()) {
                         solidColorWriter.open(output);
                         solidColorWriter.writeColorProperty(color);
                     }
                     output.writeEndObject();
                     writePositionOfVectorInertial(polylineWriter, output);
                 }
-                try (BooleanCesiumWriter showWriter = polylineWriter.getShowWriter()) {
+                try (BooleanCesiumWriter showWriter =
+                    polylineWriter.getShowWriter()) {
                     showWriter.open(output);
-                    showWriter.writeInterval(availability);
+                    showWriter.writeInterval(clock.getAvailability());
                     showWriter.writeBoolean(true);
                 }
             }
@@ -402,32 +423,41 @@ public class Polyline {
     }
 
     /**
-     * This functions aims at writing a polyline built as a vector in the Fixed frame.
+     * This functions aims at writing a polyline built as a vector in the Fixed
+     * frame.
      *
      * @param packet : The packet where the polyline is written
-     * @param output : The cesium output stream that writes the strings in the file
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
      */
-    public void writePolylineVectorFixed(final PacketCesiumWriter packet, final CesiumOutputStream output) {
+    public void writePolylineVectorFixed(final PacketCesiumWriter packet,
+                                         final CesiumOutputStream output) {
         if (arrow) {
-            try (PolylineCesiumWriter polylineWriter = packet.getPolylineWriter()) {
+            try (PolylineCesiumWriter polylineWriter =
+                packet.getPolylineWriter()) {
                 polylineWriter.open(output);
                 polylineWriter.writeWidthProperty(width);
                 polylineWriter.writeArcTypeProperty(arcType);
                 polylineWriter.writeShowProperty(show);
-                polylineWriter.writeDistanceDisplayConditionProperty(nearDistance, farDistance);
-                try (PolylineMaterialCesiumWriter materialWriter = polylineWriter.getMaterialWriter()) {
+                polylineWriter
+                    .writeDistanceDisplayConditionProperty(nearDistance,
+                                                           farDistance);
+                try (PolylineMaterialCesiumWriter materialWriter =
+                    polylineWriter.getMaterialWriter()) {
                     materialWriter.open(output);
                     output.writeStartObject();
-                    try (SolidColorMaterialCesiumWriter solidColorWriter = materialWriter.getSolidColorWriter()) {
+                    try (SolidColorMaterialCesiumWriter solidColorWriter =
+                        materialWriter.getSolidColorWriter()) {
                         solidColorWriter.open(output);
                         solidColorWriter.writeColorProperty(color);
                     }
                     output.writeEndObject();
                     writePositionOfVectorFixed(polylineWriter, output);
                 }
-                try (BooleanCesiumWriter showWriter = polylineWriter.getShowWriter()) {
+                try (BooleanCesiumWriter showWriter =
+                    polylineWriter.getShowWriter()) {
                     showWriter.open(output);
-                    showWriter.writeInterval(availability);
+                    showWriter.writeInterval(clock.getAvailability());
                     showWriter.writeBoolean(true);
                 }
             }
@@ -437,28 +467,37 @@ public class Polyline {
     }
 
     /**
-     * This function aims at writing a polyline built as a non-vector to be displayed as a line of visibility.
+     * This function aims at writing a polyline built as a non-vector to be
+     * displayed as a line of visibility.
      *
-     * @param packet     : The packet where the polyline is written
-     * @param output     : The cesium output stream that writes the strings in the file
-     * @param references : The references (example: object_ID#position the reference of the position of the object) that will be used to position each extremity of the polyline that will be displayed
-     * @param showList   : A list of Show objects, these objects will be useful to know when to display or not the polyline in time
+     * @param packet : The packet where the polyline is written
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
+     * @param references : The references (example: object_ID#position the
+     *        reference of the position of the object) that will be used to
+     *        position each extremity of the polyline that will be displayed
+     * @param showList : A list of Show objects, these objects will be useful to
+     *        know when to display or not the polyline in time
      */
-    public void writePolylineOfVisibility(final PacketCesiumWriter packet, final CesiumOutputStream output,
-                                          final Iterable<Reference> references, final List<CzmlShow> showList) {
+    public void writePolylineOfVisibility(final PacketCesiumWriter packet,
+                                          final CesiumOutputStream output,
+                                          final Iterable<Reference> references,
+                                          final List<CzmlShow> showList) {
         try (PolylineCesiumWriter polylineWriter = packet.getPolylineWriter()) {
             polylineWriter.open(output);
             polylineWriter.writeWidthProperty(this.getWidth());
             polylineWriter.writeArcTypeProperty(CesiumArcType.NONE);
-            try (PolylineMaterialCesiumWriter materialWriter = polylineWriter.getMaterialWriter()) {
+            try (PolylineMaterialCesiumWriter materialWriter =
+                polylineWriter.getMaterialWriter()) {
                 materialWriter.open(output);
                 output.writeStartObject();
-                try (SolidColorMaterialCesiumWriter solidColorWriter = materialWriter.getSolidColorWriter()) {
+                try (SolidColorMaterialCesiumWriter solidColorWriter =
+                    materialWriter.getSolidColorWriter()) {
                     solidColorWriter.open(output);
                     solidColorWriter.writeColorProperty(this.getColor());
                 }
                 output.writeEndObject();
-                writePositionOfVisibility(polylineWriter, this, output, references);
+                writePositionOfVisibility(polylineWriter, output, references);
                 writeShowOfVisibility(polylineWriter, output, showList);
                 output.writeEndSequence();
             }
@@ -471,15 +510,18 @@ public class Polyline {
      * @param packet : The packet where the polyline is written.
      * @param output : The cesium output stream that writes in the czml file.
      */
-    public void writeReferencesPolyline(final PacketCesiumWriter packet, final CesiumOutputStream output) {
+    public void writeReferencesPolyline(final PacketCesiumWriter packet,
+                                        final CesiumOutputStream output) {
         try (PolylineCesiumWriter polylineWriter = packet.getPolylineWriter()) {
             polylineWriter.open(output);
             polylineWriter.writeWidthProperty(this.getWidth());
             polylineWriter.writeArcTypeProperty(CesiumArcType.NONE);
-            try (PolylineMaterialCesiumWriter materialWriter = polylineWriter.getMaterialWriter()) {
+            try (PolylineMaterialCesiumWriter materialWriter =
+                polylineWriter.getMaterialWriter()) {
                 materialWriter.open(output);
                 output.writeStartObject();
-                try (SolidColorMaterialCesiumWriter solidColorWriter = materialWriter.getSolidColorWriter()) {
+                try (SolidColorMaterialCesiumWriter solidColorWriter =
+                    materialWriter.getSolidColorWriter()) {
                     solidColorWriter.open(output);
                     solidColorWriter.writeColorProperty(this.getColor());
                 }
@@ -490,14 +532,19 @@ public class Polyline {
     }
 
     /**
-     * This function aims at writing the position of the polyline built as a non-vector to display an attitude in the INERTIAL frame.
+     * This function aims at writing the position of the polyline built as a
+     * non-vector to display an attitude in the INERTIAL frame.
      *
-     * @param polylineWriter : the writer extracted from a packet cesium writer to write parameters of the polyline
-     * @param output         : The cesium output stream that writes the strings in the file
+     * @param polylineWriter : the writer extracted from a packet cesium writer
+     *        to write parameters of the polyline
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
      */
-    private void writePositionOfVectorInertial(final PolylineCesiumWriter polylineWriter,
-                                               final CesiumOutputStream output) {
-        try (PositionListCesiumWriter positionWriter = polylineWriter.getPositionsWriter()) {
+    private void
+        writePositionOfVectorInertial(final PolylineCesiumWriter polylineWriter,
+                                      final CesiumOutputStream output) {
+        try (PositionListCesiumWriter positionWriter =
+            polylineWriter.getPositionsWriter()) {
             positionWriter.open(output);
             final List<Cartesian> tempCartesians = new ArrayList<>();
             tempCartesians.add(firstPosition);
@@ -508,14 +555,19 @@ public class Polyline {
     }
 
     /**
-     * This function aims at writing the position of the polyline built as a non-vector to display an attitude in the FIXED frame.
+     * This function aims at writing the position of the polyline built as a
+     * non-vector to display an attitude in the FIXED frame.
      *
-     * @param polylineWriter : the writer extracted from a packet cesium writer to write parameters of the polyline
-     * @param output         : The cesium output stream that writes the strings in the file
+     * @param polylineWriter : the writer extracted from a packet cesium writer
+     *        to write parameters of the polyline
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
      */
-    private void writePositionOfVectorFixed(final PolylineCesiumWriter polylineWriter,
-                                            final CesiumOutputStream output) {
-        try (PositionListCesiumWriter positionWriter = polylineWriter.getPositionsWriter()) {
+    private void
+        writePositionOfVectorFixed(final PolylineCesiumWriter polylineWriter,
+                                   final CesiumOutputStream output) {
+        try (PositionListCesiumWriter positionWriter =
+            polylineWriter.getPositionsWriter()) {
             positionWriter.open(output);
             positionWriter.writeReferenceFrame("FIXED");
             final List<Cartesian> tempCartesians = new ArrayList<>();
@@ -526,32 +578,44 @@ public class Polyline {
     }
 
     /**
-     * This function aims at writing the position of the polyline built as a non-vector to display a line of visibility.
+     * This function aims at writing the position of the polyline built as a
+     * non-vector to display a line of visibility.
      *
-     * @param polylineWriter : the writer extracted from a packet cesium writer to write parameters of the polyline
-     * @param polylineInput  : the polyline object inputted
-     * @param output         : The cesium output stream that writes the strings in the file
-     * @param references     : The references (example: object_ID#position the reference of the position of the object) that will be used to position each extremity of the polyline that will be displayed
+     * @param polylineWriter : the writer extracted from a packet cesium writer
+     *        to write parameters of the polyline
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
+     * @param references : The references (example: object_ID#position the
+     *        reference of the position of the object) that will be used to
+     *        position each extremity of the polyline that will be displayed
      */
-    private void writePositionOfVisibility(final PolylineCesiumWriter polylineWriter, final Polyline polylineInput,
-                                           final CesiumOutputStream output, final Iterable<Reference> references) {
-        polylineWriter.writeArcTypeProperty(polylineInput.getArcType());
+    private void
+        writePositionOfVisibility(final PolylineCesiumWriter polylineWriter,
+                                  final CesiumOutputStream output,
+                                  final Iterable<Reference> references) {
 
-        try (PositionListCesiumWriter positionWriter = polylineWriter.getPositionsWriter()) {
+        try (PositionListCesiumWriter positionWriter =
+            polylineWriter.getPositionsWriter()) {
             positionWriter.open(output);
             positionWriter.writeReferences(references);
         }
     }
 
     /**
-     * This functions aims at writing the list of Show objects of a polyline built as a non-vector to display a line of visibility.
+     * This functions aims at writing the list of Show objects of a polyline
+     * built as a non-vector to display a line of visibility.
      *
-     * @param polylineWriter : the writer extracted from a packet cesium writer to write parameters of the polyline
-     * @param output         : The cesium output stream that writes the strings in the file
-     * @param showList       : A list of Show objects, these objects will be useful to know when to display or not the polyline in time
+     * @param polylineWriter : the writer extracted from a packet cesium writer
+     *        to write parameters of the polyline
+     * @param output : The cesium output stream that writes the strings in the
+     *        file
+     * @param showList : A list of Show objects, these objects will be useful to
+     *        know when to display or not the polyline in time
      */
-    private void writeShowOfVisibility(final PolylineCesiumWriter polylineWriter, final CesiumOutputStream output,
-                                       final List<CzmlShow> showList) {
+    private void
+        writeShowOfVisibility(final PolylineCesiumWriter polylineWriter,
+                              final CesiumOutputStream output,
+                              final List<CzmlShow> showList) {
         try (BooleanCesiumWriter showWriter = polylineWriter.getShowWriter()) {
             showWriter.open(output);
             output.writeStartSequence();
@@ -582,33 +646,42 @@ public class Polyline {
     }
 
     /**
-     * This function takes the first and second reference defined in the constructor and build a polyline with them.
+     * This function takes the first and second reference defined in the
+     * constructor and build a polyline with them.
      *
-     * @param polylineCesiumWriter : The writer that can write inside a polyline.
-     * @param output               : The cesium output stream that writes inside the czml file.
+     * @param polylineCesiumWriter : The writer that can write inside a
+     *        polyline.
+     * @param output : The cesium output stream that writes inside the czml
+     *        file.
      */
-    private void writeReferences(final PolylineCesiumWriter polylineCesiumWriter, final CesiumOutputStream output) {
+    private void
+        writeReferences(final PolylineCesiumWriter polylineCesiumWriter,
+                        final CesiumOutputStream output) {
         if (firstReference == null || secondReference == null) {
             throw new OreCzmlException(OreCzmlMessages.NO_REFERENCES_POLYLINE);
         } else {
-            try (PositionListCesiumWriter positionWriter = polylineCesiumWriter.getPositionsWriter()) {
+            try (PositionListCesiumWriter positionWriter =
+                polylineCesiumWriter.getPositionsWriter()) {
                 positionWriter.open(output);
-                final Reference[] references = Arrays.asList(firstReference, secondReference)
-                                                     .toArray(new Reference[0]);
-                final Iterable<Reference> listOfReferences = convertToIterable(references);
+                final Reference[] references =
+                    Arrays.asList(firstReference, secondReference)
+                        .toArray(new Reference[0]);
+                final Iterable<Reference> listOfReferences =
+                    convertToIterable(references);
                 positionWriter.writeReferences(listOfReferences);
             }
         }
     }
 
     /**
-     * This function aims at converting an array of references into an iterable object.
+     * This function aims at converting an array of references into an iterable
+     * object.
      *
      * @param array : An array of references.
      * @return : An iterable object of references.
      */
-    private static Iterable<Reference> convertToIterable(final Reference[] array) {
-        return () -> Arrays.stream(array)
-                           .iterator();
+    private static Iterable<Reference>
+        convertToIterable(final Reference[] array) {
+        return () -> Arrays.stream(array).iterator();
     }
 }
